trying to merge text edits